--- a/builder.html
+++ b/builder.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/forms.css">
     <link rel="stylesheet" href="css/resume.css">
+    <link rel="stylesheet" href="css/buttons.css">
     
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -53,11 +54,11 @@
                         <h2 class="text-2xl font-bold text-gray-800">Build Your Flop Resume</h2>
                         <div class="flex gap-4">
                             <button type="button" id="autoFlopButton"
-                                    class="theme-secondary-button px-4 py-2 rounded-lg transition-all duration-300 flex items-center gap-2 hover-scale">
+                                    class="theme-secondary-button btn-md btn-icon rounded-lg">
                                 <span>🎲</span> Random Autoflop Me
                             </button>
                             <button type="button" id="exportButton"
-                                    class="theme-primary-button px-4 py-2 rounded-lg transition-all duration-300 flex items-center gap-2 hover-scale">
+                                    class="theme-primary-button btn-md btn-icon rounded-lg">
                                 <span>📄</span> Export PDF
                             </button>
                         </div>
