--- a/builder.html
+++ b/builder.html
@@ -46,6 +46,15 @@
 
     <!-- Main Content -->
     <main class="container py-8">
+        <!-- Back Button -->
+        <div class="mb-6">
+            <a href="index.html" class="inline-flex items-center theme-secondary-button btn-md rounded-lg hover:scale-105 transition-transform duration-200">
+                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                </svg>
+                Back to Home
+            </a>
+        </div>
         <div class="grid lg:grid-cols-2 gap-8">
             <!-- Form Section -->
             <section class="bg-white rounded-xl shadow-lg p-6">
